trying to fix layoutshift in header

--- a/styles/small.css
+++ b/styles/small.css
@@ -18,7 +18,7 @@ header {
     text-align: center;
     font-family: Shadows Into Light Two, Helvetica, sans-serif;
     font-weight: bolder;
-    font-size: 88px;
+    font-size: 60px;
 }
 
 .head-content {
